[package]
name = "mdbook-pandoc-format"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4"
clap = "2.0"
anyhow = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde = "1.0"
